--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
     <script>
       // TODO: fill these with your real values
-      const SUPABASE_URL = "https://YOUR-PROJECT-REF.supabase.co";
-      const SUPABASE_ANON_KEY = "YOUR_ANON_PUBLIC_KEY";
+      const SUPABASE_URL = "https://wyjesveknvzkyvwqrefn.supabase.co";
+      const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind5amVzdmVrbnZ6a3l2d3FyZWZuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA5NTY1NzMsImV4cCI6MjA3NjUzMjU3M30.ajw4G4-byXLA2Xm-ze_qXQhNvlk0MGkvcE8QIAOHczs";
 
       const client = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
         auth: {
